Fix overlap between filters and add courses on mobile view

--- a/assets/css/settings.scss
+++ b/assets/css/settings.scss
@@ -338,6 +338,11 @@
 			}
 		}
 	}
+	@media screen and (max-width: 782px) and (min-width: 480px) {
+		.tablenav.bottom .displaying-num {
+			position: inherit;
+		}
+	}
 }
 
 .sensei-grading-main  {
